@@ -3,7 +3,7 @@ Section: x11
 Priority: optional
 Maintainer: Debian X Strike Force <debian-x@lists.debian.org>
 Uploaders: David Martínez Moreno <ender@debian.org>, David Nusinow <dnusinow@debian.org>, Julien Cristau <jcristau@debian.org>
-Standards-Version: 3.7.3
+Standards-Version: 3.8.2
 Vcs-Browser: http://git.debian.org/?p=pkg-xorg/app/xterm.git
 Vcs-Git: git://git.debian.org/git/pkg-xorg/app/xterm
 Homepage: http://invisible-island.net/xterm/xterm.html
