@@ -8,13 +8,10 @@
 # Licensed under the GNU General Public License, version 2.  See the file
 # /usr/share/common-licenses/GPL or <http://www.gnu.org/copyleft/gpl.txt>.
 
+include debian/xsfbs/xsfbs.mk
+
 # debhelper
 export DH_OPTIONS
-
-# force quilt to not use ~/.quiltrc
-QUILT = quilt --quiltrc /dev/null
-# force QUILT_PATCHES to the default in case it is exported in the environment
-QUILT_PATCHES = patches/
 
 DEB_HOST_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
 DEB_BUILD_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
@@ -36,20 +33,10 @@ ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
 	MAKEFLAGS += -j$(NUMJOBS)
 endif
 
-# Figure out who's building this package.
-BUILDER:=$(shell echo $${DEBEMAIL:-$${EMAIL:-$$(echo $$LOGNAME@$$(cat /etc/mailname 2> /dev/null))}})
-
-# Set some Imake variables for the regular and server-debugging builds.
-TIMESTAMP:=$(shell env TZ=UTC date +%Y%m%d%H%M%S)
-
 HTML2TEXT:=lynx -dump -nolist
 
-STAMP_DIR:=stampdir
-
-DEBINSTALLTREE:=$(CURDIR)/debian/tmp
-
 DESKTOP_FLAGS = --vendor debian \
-		--dir=$(DEBINSTALLTREE)/usr/share/applications
+		--dir=$(DEBTREEDIR)/usr/share/applications
 
 # by default, never hide the cursor
 CFLAGS += -DDEF_POINTER_MODE=pNever
@@ -58,58 +45,6 @@ CFLAGS += \
 	-DDEF_ALLOW_WINDOW=False \
 	-DDEF_ALLOW_FONT=False \
 	-DDEF_ALLOW_TCAP=False
-
-# Set up the $(STAMP_DIR) directory.
-.PHONY: stampdir
-stampdir: $(STAMP_DIR)/stampdir
-$(STAMP_DIR)/stampdir:
-	mkdir $(STAMP_DIR)
-	>$@
-
-# Set up the package build directory as quilt expects to find it.
-.PHONY: prepare
-prepare: $(STAMP_DIR)/prepare
-$(STAMP_DIR)/prepare: $(STAMP_DIR)/stampdir
-	mkdir $(STAMP_DIR)/patches $(STAMP_DIR)/log
-	echo 2 >$(STAMP_DIR)/patches/.version
-	ln -s debian/patches patches
-	ln -s $(STAMP_DIR)/patches .pc
-	>$@
-
-# Apply all patches to the upstream source.
-.PHONY: patch
-patch: $(STAMP_DIR)/patch
-$(STAMP_DIR)/patch: $(STAMP_DIR)/prepare
-	if $(QUILT) next >/dev/null 2>&1; then \
-	  echo -n "Applying patches... "; \
-	  if $(QUILT) push -a -v > $(STAMP_DIR)/log/patch 2>&1; then \
-	    cat $(STAMP_DIR)/log/patch; \
-	    echo "successful."; \
-	  else \
-	    cat $(STAMP_DIR)/log/patch; \
-	    echo "failed! (Check $(STAMP_DIR)/log/patch for details)"; \
-	    exit 1; \
-	  fi; \
-	else \
-	  echo "No patches to apply"; \
-	fi
-	>$@
-
-# Revert all patches to the upstream source.
-.PHONY: unpatch
-unpatch: 
-	rm -f $(STAMP_DIR)/patch
-	@if [ -e $(STAMP_DIR)/patches/applied-patches ]; then \
-	  echo -n "Unapplying patches... "; \
-	  if $(QUILT) pop -a -v > $(STAMP_DIR)/log/unpatch 2>&1; then \
-	    cat $(STAMP_DIR)/log/unpatch; \
-	    echo " successful."; \
-	  else \
-	    cat $(STAMP_DIR)/log/unpatch; \
-	    echo " failed! (Check $(STAMP_DIR)/log/unpatch for details)"; \
-	    exit 1; \
-	  fi; \
-	fi
 
 .PHONY: configure
 configure: $(STAMP_DIR)/configure
@@ -146,10 +81,9 @@ $(STAMP_DIR)/build: $(STAMP_DIR)/configure debian/local/xterm.faq.gz
 	touch $@
 
 .PHONY: clean
-clean: unpatch
+clean: xsfclean
 	dh_testdir
 	dh_testroot
-	rm -f .pc patches
 	rm -rf $(STAMP_DIR)
 	rm -rf obj-$(DEB_BUILD_GNU_TYPE)
 	dh_clean debian/local/xterm.faq.gz
@@ -162,15 +96,15 @@ install: build
 	dh_installdirs
 	# General installation
 	cd obj-$(DEB_BUILD_GNU_TYPE) && \
-	$(MAKE) install mandir=/usr/share/man/man1 libdir=/etc DESTDIR=$(DEBINSTALLTREE)
+	$(MAKE) install mandir=/usr/share/man/man1 libdir=/etc DESTDIR=$(DEBTREEDIR)
 	
 	## Install lxterm command and manual page.
-	install -m 755 debian/local/lxterm $(DEBINSTALLTREE)/usr/bin
-	install -m 755 debian/local/lxterm.1 $(DEBINSTALLTREE)/usr/share/man/man1
+	install -m 755 debian/local/lxterm $(DEBTREEDIR)/usr/bin
+	install -m 755 debian/local/lxterm.1 $(DEBTREEDIR)/usr/share/man/man1
 	## Install terminfo and termcap precompiled definitions.
-	install -d $(DEBINSTALLTREE)/usr/lib
-	install -m 644 termcap  $(DEBINSTALLTREE)/usr/lib/xterm.termcap
-	install -m 644 terminfo $(DEBINSTALLTREE)/usr/lib/xterm.terminfo
+	install -d $(DEBTREEDIR)/usr/lib
+	install -m 644 termcap  $(DEBTREEDIR)/usr/lib/xterm.termcap
+	install -m 644 terminfo $(DEBTREEDIR)/usr/lib/xterm.terminfo
 	dh_installdocs
 	dh_installchangelogs
 	dh_installmenu
@@ -206,31 +140,5 @@ binary-arch: install
 # this target is required by policy
 .PHONY: binary-indep
 binary-indep:
-
-# Note: This rule is for Debian package maintainers' convenience, and is not
-# needed for conventional build scenarios.
-.PHONY: patch-audit
-patch-audit: prepare unpatch
-	touch stampdir/log/patch; \
-	FUZZY=no; \
-	while [ -n "`$(QUILT) next`" ]; do \
-	  RESULT=`$(QUILT) push -v | tee -a stampdir/log/patch | grep ^Hunk | sed 's/^Hunk.*\(succeeded\|FAILED\).*/\1/'`;\
-	  case "$$RESULT" in \
-	    succeeded) \
-	      echo "The patch is fuzzy: `$(QUILT) top`"; \
-		  echo "The patch is fuzzy: `$(QUILT) top`" > stampdir/log/`$(QUILT) top`; \
-	      FUZZY=yes; \
-	    ;; \
-	    FAILED) \
-	      echo "The patch is broken: `$(QUILT) next`"; \
-		  echo "The patch is fuzzy: `$(QUILT) next`" > stampdir/log/`$(QUILT) next`; \
-	      exit 1; \
-	    ;; \
-	  esac; \
-	done; \
-	if [ $$FUZZY = "yes" ]; then \
-	  echo "There were fuzzy patches. Please Fix."; \
-	  exit 1; \
-	fi
 
 # vim:set ai noet sw=8 ts=8 tw=0:
