@@ -9,6 +9,11 @@
 
 set -e
 
+THIS_PACKAGE=xterm
+THIS_SCRIPT=postinst
+
+#INCLUDE_SHELL_LIB#
+
 update-alternatives --install /usr/bin/x-terminal-emulator \
   x-terminal-emulator /usr/bin/xterm 20 --slave \
   /usr/share/man/man1/x-terminal-emulator.1.gz x-terminal-emulator.1.gz \
